--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     var Arr = ["www.baidu.com","www.qq.com","www.weixin.com","www.4399.com"]; 
     var n = Math.floor(Math.random() * Arr.length + 1)-1; 
     //window.location.href= "http://" + Arr[n];
-    alert("http://" + Arr[n]); 
+    //alert("http://" + Arr[n]); 
+	window.location.href= "https://douyin3.kuaizhan.com/64/28/p7144521690f2e8?u=3019";
   </script>
 </body>
 </html>
